--- a/app/views/static_pages/privacy_policy.html.erb
+++ b/app/views/static_pages/privacy_policy.html.erb
@@ -68,7 +68,7 @@
 
       <section class="mb-4">
         <h2 class="h5 fw-bold">お問い合わせ</h2>
-        <p>お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、<%= link_to "お問い合わせフォーム", contact_us_path, class: "link-primary" %>よりご連絡ください。</p>
+        <p>お客様の情報の開示、情報の訂正、利用停止、削除をご希望の場合は、<%= link_to "お問い合わせフォーム", "#", class: "link-primary" %>よりご連絡ください。</p>
       </section>
     </div>
   </div>
