--- a/app/views/travels/new.html.erb
+++ b/app/views/travels/new.html.erb
@@ -1,67 +1,77 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 mx-auto">
-      <div class="mb-3">
-        <%= link_to 'プラン一覧に戻る', travels_path %>
-      </div>
+<div class="travel-container">
+  <div class="container">
+    <div class="travel-breadcrumb">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><%= link_to 'Home', root_path %></li>
+          <li class="breadcrumb-item"><%= link_to 'プラン一覧', travels_path %></li>
+          <li class="breadcrumb-item active">プラン作成</li>
+        </ol>
+      </nav>
+    </div>
 
-      <h1 class="mb-4">プラン作成</h1>
+    <div class="travel-header">
+      <h1>プラン作成</h1>
+    </div>
 
-      <%= form_with model: @travel, local: true do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
+    <div class="row">
+      <div class="col-md-8 mx-auto">
+        <%= form_with model: @travel, local: true, class: "travel-form" do |f| %>
+          <%= render 'shared/error_messages', object: f.object %>
 
-        <div class="mb-3">
-          <%= f.label :title, 'タイトル', class: 'form-label' %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
-
-        <div class="mb-3">
-          <%= f.label :start_date, '開始日', class: 'form-label' %>
-          <%= f.date_field :start_date, class: 'form-control' %>
-        </div>
-
-        <div class="mb-3">
-          <%= f.label :end_date, '終了日', class: 'form-label' %>
-          <%= f.date_field :end_date, class: 'form-control' %>
-        </div>
-
-        <div class="mb-3">
-          <%= f.label :member_list, 'メンバー', class: 'form-label' %>
-          <div class="member-select-container border rounded p-3" data-controller="members">
-            <div class="form-check">
-              <%= check_box_tag 'select_all', '1', false, 
-                  class: 'form-check-input',
-                  id: 'select_all_members',
-                  data: { 
-                    members_target: 'selectAll',
-                    action: 'members#toggleAll'
-                  } %>
-              <%= label_tag 'select_all_members', 'すべて', class: 'form-check-label fw-bold' %>
-            </div>
-            <hr>
-            <div class="member-list">
-              <% @friends.each do |friend| %>
-                <div class="form-check">
-                  <%= check_box_tag 'member_ids[]', 
-                      friend.id, 
-                      @travel.travel_members.where(role: :guest).pluck(:user_id).include?(friend.id),
-                      class: 'form-check-input member-checkbox',
-                      data: { 
-                        members_target: 'checkbox',
-                        action: 'members#toggleIndividual'
-                      } %>
-                  <%= label_tag "member_checkbox_#{friend.id}", friend.name, class: 'form-check-label' %>
-                </div>
-              <% end %>
-            </div>
+          <div class="mb-3">
+            <%= f.label :title, 'タイトル', class: 'form-label required' %>
+            <%= f.text_field :title, class: 'form-control', placeholder: '例：沖縄旅行 2023' %>
           </div>
-          <div class="form-text">メンバーを選択してください</div>
-        </div>
 
-        <div class="text-center">
-          <%= f.submit '作成', class: 'btn btn-primary btn-lg' %>
-        </div>
-      <% end %>
+          <div class="mb-3">
+            <%= f.label :start_date, '開始日', class: 'form-label required' %>
+            <%= f.date_field :start_date, class: 'form-control' %>
+          </div>
+
+          <div class="mb-3">
+            <%= f.label :end_date, '終了日', class: 'form-label required' %>
+            <%= f.date_field :end_date, class: 'form-control' %>
+          </div>
+
+          <div class="mb-4">
+            <%= f.label :member_list, 'メンバー', class: 'form-label' %>
+            <div class="member-select-container border rounded p-3" data-controller="members">
+              <div class="form-check">
+                <%= check_box_tag 'select_all', '1', false, 
+                    class: 'form-check-input',
+                    id: 'select_all_members',
+                    data: { 
+                      members_target: 'selectAll',
+                      action: 'members#toggleAll'
+                    } %>
+                <%= label_tag 'select_all_members', 'すべて', class: 'form-check-label fw-bold' %>
+              </div>
+              <hr>
+              <div class="member-list">
+                <% @friends.each do |friend| %>
+                  <div class="form-check">
+                    <%= check_box_tag 'member_ids[]', 
+                        friend.id, 
+                        @travel.travel_members.where(role: :guest).pluck(:user_id).include?(friend.id),
+                        class: 'form-check-input member-checkbox',
+                        data: { 
+                          members_target: 'checkbox',
+                          action: 'members#toggleIndividual'
+                        } %>
+                    <%= label_tag "member_checkbox_#{friend.id}", friend.name, class: 'form-check-label' %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+            <div class="form-text">メンバーを選択してください</div>
+          </div>
+
+          <div class="text-center mt-4 mb-4">
+            <%= f.submit '作成', class: 'travel-btn btn-primary btn-lg' %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
