フラッシュめっせーじのi18n日本語化

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,8 +42,8 @@
     
     <% if flash.present? %>
       <div class="container mt-3">
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %> alert-dismissible fade show" role="alert">
+        <% flash.each do |type, message| %>
+          <div class="alert alert-<%= bootstrap_alert_class(type) %> alert-dismissible fade show" role="alert">
             <%= message %>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
