--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,3 +1,4 @@
+<!-- フォトブック機能の修正 - 写真がない場合のメッセージ削除 -->
 <div class="travel-container" data-controller="photo" data-photo-travel-id-value="<%= @travel.id %>">
   <div class="container">
     <div class="travel-breadcrumb">
@@ -53,14 +54,6 @@
                     </button>
                   </div>
                 <% end %>
-              <% elsif @is_planner %>
-                <div class="p-4 text-center text-muted">
-                  <p>まだ写真がありません。「写真を追加」ボタンから写真をアップロードしてください。</p>
-                </div>
-              <% else %>
-                <div class="p-4 text-center text-muted">
-                  <p>まだ写真がありません。</p>
-                </div>
               <% end %>
             </div>
           </div>
