--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
           <% end %>
         </div>
         <div class="footer-link-item">
-          <%= link_to "#", class: "footer-link" do %>
+          <%= link_to contact_us_path, class: "footer-link" do %>
             <i class="bi bi-envelope me-1"></i>お問い合わせ
           <% end %>
         </div>
